Fix trust paragraph alignment

--- a/src/_5g/trust/trust.scss
+++ b/src/_5g/trust/trust.scss
@@ -45,7 +45,7 @@
     font-size: 1rem;
     color: $black;
     width: 75vw;
-    text-align: left;
+    text-align: center;
     flex-shrink: 1;
 
     &-container {
